components/chatbot2-apr29-2/base/deployment-model-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: chatbot2-apr29-2-model-server
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: chatbot2-apr29-2-model-server
    app.kubernetes.io/part-of: chatbot2-apr29-2
  name: chatbot2-apr29-2-model-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: chatbot2-apr29-2-model-server
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: chatbot2-apr29-2-model-server
    spec:
      containers:
        - env:
            - name: HOST
              value: "0.0.0.0"
            - name: PORT
              value: "8001"
            - name: MODEL_PATH
              value: /model/model.file
            - name: CHAT_FORMAT
              value: openchat
          image: quay.io/ai-lab/llamacpp_python:latest
          volumeMounts:
            - name: model-file
              mountPath: /model
          name: app-model-service
          ports:
            - containerPort: 8001
          securityContext:
            runAsNonRoot: true
      volumes:
        - name: model-file
          emptyDir: {}
