components/chatbot2-apr29-2/base/service-database.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: chatbot2-apr29-2-database
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: chatbot2-apr29-2-database
  name: chatbot2-apr29-2-database
spec:
  ports:
    - port: 
      protocol: TCP
      targetPort: 
  selector:
    app.kubernetes.io/instance: chatbot2-apr29-2-database
