components/chatbot2-apr29-2/base/service-model-server.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: chatbot2-apr29-2-model-server
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: chatbot2-apr29-2-model-server
  name: chatbot2-apr29-2-model-server
spec:
  ports:
    - port: 8001
      protocol: TCP
      targetPort: 8001
  selector:
    app.kubernetes.io/instance: chatbot2-apr29-2-model-server
