components/chatbot2-apr29-2/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: chatbot2-apr29-2
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: chatbot2-apr29-2
  name: chatbot2-apr29-2
spec:
  ports:
    - port: 8501
      protocol: TCP
      targetPort: 8501
  selector:
    app.kubernetes.io/instance: chatbot2-apr29-2
